@@ -63,7 +63,9 @@ public class PhetFileMenu extends JMenu {
                 new PreferencesDialog( phetFrame, trackingInfo,
                                        new DefaultManualUpdateChecker( phetFrame, simInfo ),
                                        new DefaultUpdatePreferences(),
-                                       new DefaultTrackingPreferences() ,simInfo.isTrackingEnabled(),simInfo.isUpdatesEnabled()).setVisible( true );
+                                       new DefaultTrackingPreferences(),
+                                       simInfo.isTrackingFeatureIncluded(),
+                                       simInfo.isUpdatesFeatureIncluded() ).setVisible( true );
             }
         } );
         preferencesMenuItem.setMnemonic( PhetCommonResources.getInstance().getLocalizedString( "Common.FileMenu.PreferencesMnemonic" ).charAt( 0 ) );
